# aver-green-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  agent_card.toml  aver-run  aver-run.sh  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run-dashboard.sh  run.sh  run_baseline_tests.py
.github/workflows/: build-image.yaml
examples/: simple_test.py
scenarios/aver/: gemini_agent.py  openrouter_agent.py  scenario.toml  scenario_a2a_test.toml  scenario_llm_test.toml  scenario_multimodel.toml
scripts/: debug_agent.py  purple_agent_realistic.py  test_with_purple_agent.py
src/aver/: __init__.py  a2a_client.py  cli.py  consistency_analyzer.py  consistency_tester.py  dashboard.py  error_injector.py  evaluator.py  execution_validator.py  executor.py  green_agent.py  llm_judge.py  llm_purple_agent.py  logging_config.py  metacognitive_validator.py  mock_agent.py  models.py  results_analyzer.py  sandbox.py  server.py  statistical_analysis.py  task_suite.py  trace_analyzer.py
tasks/: TASK_TEMPLATE.yaml
tasks/adversarial/: aver_adversarial_ambiguous_2_018.yaml  aver_adversarial_chain_3_035.yaml  aver_adversarial_compound_4_040.yaml  aver_adversarial_edge_case_3_020.yaml  aver_adversarial_expert_4_036.yaml  aver_adversarial_multi_3_017.yaml  aver_adversarial_noise_2_034.yaml  aver_adversarial_subtle_3_019.yaml
tasks/context_loss/: aver_context_consistency_3_016.yaml  aver_context_constraint_2_013.yaml  aver_context_drift_2_014.yaml  aver_context_security_4_033.yaml  aver_context_state_3_015.yaml  aver_context_version_2_032.yaml
tasks/hallucination/: aver_hallucination_code_api_1_002.yaml  aver_hallucination_code_api_2_001.yaml  aver_hallucination_code_api_2_003.yaml  (+6 more)
tests/: test_evaluator.py  test_mock_agent.py  test_models.py  test_task_suite.py  test_validity.py
(+25 files in other folders)
