[project]
name = "aver-benchmark"
version = "0.1.0"
description = "Agent Verification & Error Recovery Benchmark"
authors = [
    {name = "AVER Research Team"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "agentbeats>=1.2.6",
    "earthshaker>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
aver-run = "src.aver.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
